2009-07-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/tasks.c:
   Avoid using GHashTable functions from newer GLib versions to fix
   compilation with GLib 2.8.


2009-07-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_systray.c:
   Attempt to fix crashes when quitting Geany from the system tray
   icon.


2009-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/addons.c, src/ao_doclist.c, src/ao_openuri.c, src/ao_systray.c,
   src/tasks.c:
   Use single header includes.


2009-06-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_doclist.c:
   Fix a memory leak.
 * src/ao_doclist.c:
   Fix a typo. Fix label for new, untitled files in the document list
   menu.
   Show current document in bold in in the document list menu.


2009-06-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_systray.c:
   Remove unnecessary casts.
 * src/ao_systray.c:
   Fix build for GTK 2.8.


2009-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in:
   Post-release version bump.
 * NEWS, README:
   Update for 0.2.
 * configure.in, po/addons.pot, po/geanyaddons.pot:
   Prefix the gettext package with "geany" to avoid possible naming
   conflicts.


2009-05-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_systray.c:
   Fix typo (oops).


2009-04-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * makefile.win32:
   Fix build on Windows.
 * src/ao_systray.c:
   Simplify the show/hide code so it also works for Windows.
 * po/POTFILES.in, src/Makefile.am, src/addons.c, src/ao_systray.c,
   src/ao_systray.h:
   Implement a notification area icon (systray) as part of the
   Addons plugin.


2009-04-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * makefile.win32:
   Fix Windows build (reported by Timothy Boronczyk, thanks).


2009-04-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, src/addons.c:
   Post-release version bump.