@@ -1,3 +1,9 @@
+2009-10-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/ao_doclist.c, src/addons.c:
+   Use ui_menu_add_document_items().
+
+
 2009-07-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/tasks.c:
